# zklaim

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  README.rst
lib/: CMakeLists.txt
src/: CMakeLists.txt  compileMe.txt  libsnark_wrapper.cpp  main.c  main_benchmark.c  snark.cpp  zklaim.c  zklaim.h  zklaim_ecc.c  zklaim_ecc.h  zklaim_gadget.cpp  zklaim_hash.c  zklaim_hash.h
src/other/: lamport.h  main.cpp  main_back.cpp  main_simple_example.cpp  merkle.h  merkle_dev.c  merkle_ver.c  zklaim_ecc.c
src/other/tests/: lamport_test.cpp
src/tests/: crypttest.c  randfile  randfile_sig  zklaim.cpp  zklaim_ecc.cpp
src/tests/hashes/: hello_world_size_8
zklaim/: CMakeLists.txt  README.rst  keygen.txt  main.c  main_benchmark.c  zklaim.c  zklaim.h  zklaim_ecc.c  zklaim_gadget.cpp  zklaim_hash.c
zklaim/other/: gadget.hpp  hashio.hpp  lamport.c  main_defunct.cpp  main_ref.cpp  merkle.c  zklaim_cred.hpp  zklaim_ecc.h
zklaim/other/tests/: merkle_test.cpp
zklaim/tests/: bttest.cpp  ed25519_priv  ed25519_pub  zklaim.cpp
